--- a/src/Biodata/frmBiodata.form
+++ b/src/Biodata/frmBiodata.form
@@ -171,6 +171,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="NEW"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="10" y="10" width="60" height="30"/>
